--- a/SuellenLimaPortfolio/src/app/home/home.component.html
+++ b/SuellenLimaPortfolio/src/app/home/home.component.html
@@ -31,18 +31,32 @@
                 <div class="img-curriculo">
                     <img src="../../assets/imagem-suellen.png" alt="">
                 </div>
-               </div> 
-            </header>
-            <div class="content-posts">
-                <div class="recents-posts-top">
-                    <p class="post-recents">Postagens Recentes</p>
-                    <p class="view-all">Ver todos</p>
+            </div>
+        </header>
+        <div class="content-posts">
+            <div class="recents-posts-top">
+                <p class="post-recents">Postagens Recentes</p>
+                <p class="view-all">Ver todos</p>
+            </div>
+        </div>
+        <div class="content-projects">
+            <p>Alguns projetos trabalhados</p>
+            <div class="projects-work">
+                <div>
+                    <div class="projects-work-left">
+                        <img src="../../assets/imagensProjetos/Rectangle 30.png" alt="">
+                    </div>
+                    <div class="projects-work-rigth">
+                        <h3>Designing Dashboards</h3>
+                        <!-- mudar para variavel -->
+                        <h2 class="ano">2020</h2>
+                        <h2 class="tipo">Dashboard</h2>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    </div>
                 </div>
             </div>
-            <div class="content-projects">
-                <p>Alguns projetos trabalhados</p>
-            </div>
-    
+        </div>
+
         <footer>
             <div>
                 <small class="copyright">&copy; Copyright 2058, Example Corporation</small>
