--- a/SuellenLimaPortfolio/src/app/home/home.component.html
+++ b/SuellenLimaPortfolio/src/app/home/home.component.html
@@ -5,65 +5,118 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/fedb614b0f.js" crossorigin="anonymous"></script>
     <title>Home</title>
 </head>
 
 <body>
     <div class="home">
-        <header>
-
-            <div class="header-top-rigth"></div>
-            <h3 class="pagina-projetos"><a href="#pagina-projetos"></a>Projetos</h3>
-            <!-- Em breve blog sobre programação e dicas para iniciantes, como estudar plataformas e etc. -->
-            <h3 class="pagina-blog"><a href="#pagina-blog"></a>Blog</h3>
-            <h3 class="pagina-contatos"><a href="#pagina-contato"></a>Contato</h3>
-            <div class="header-center">
-                <h1>Olá, eu sou a Suellen,<br>
-                    Desenvolvedora de Software</h1>
-                <p>Me encontrei na tecnologia e cada aprenzizado na programação me ajuda a ganhar mais experiência.
-                    Na programação gosot de me sentir desafiada e quanto maior o desafio maior será meu empenho em
-                    entregar a tarefa da melhor forma para o cliente!
-                </p>
-                <!-- validar se o position dessa classe ou outra propriedade continua atrapalhando de aparecer o texto do botão -->
-                <button type="" class="btn-download">
-                    Download Curriculo
-                </button>
-                <div class="img-curriculo">
-                    <img src="../../assets/imagem-suellen.png" alt="">
-                </div>
-            </div>
-        </header>
-        <div class="content-posts">
-            <div class="recents-posts-top">
-                <p class="post-recents">Postagens Recentes</p>
-                <p class="view-all">Ver todos</p>
-            </div>
-        </div>
-        <div class="content-projects">
-            <p>Alguns projetos trabalhados</p>
-            <div class="projects-work">
-                <div>
-                    <div class="projects-work-left">
-                        <img src="../../assets/imagensProjetos/Rectangle 30.png" alt="">
+        <div class="container-wrap">
+            <div class="container">
+                <header>
+                    <div class="header-top-rigth"></div>
+                    <h3 class="pagina-projetos"><a href="#pagina-projetos"></a>Projetos</h3>
+                    <!-- Em breve blog sobre programação e dicas para iniciantes, como estudar plataformas e etc. -->
+                    <h3 class="pagina-blog"><a href="#pagina-blog"></a>Blog</h3>
+                    <h3 class="pagina-contatos"><a href="#pagina-contato"></a>Contato</h3>
+                    <div class="header-center">
+                        <h1>Olá, eu sou a Suellen,<br>
+                            Desenvolvedora de Software</h1>
+                        <p>Me encontrei na tecnologia e cada aprenzizado na programação me ajuda a ganhar mais
+                            experiência.
+                            Na programação gosot de me sentir desafiada e quanto maior o desafio maior será meu empenho
+                            em
+                            entregar a tarefa da melhor forma para o cliente!
+                        </p>
+                        <!-- validar se o position dessa classe ou outra propriedade continua atrapalhando de aparecer o texto do botão -->
+                        <button type="" class="btn-download">
+                            Download Curriculo
+                        </button>
+                        <div class="img-curriculo">
+                            <img src="../../assets/imagem-suellen.png" alt="">
+                        </div>
                     </div>
-                    <div class="projects-work-rigth">
-                        <h3>Designing Dashboards</h3>
-                        <!-- mudar para variavel -->
-                        <h2 class="ano">2020</h2>
-                        <h2 class="tipo">Dashboard</h2>
-                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                </header>
+                <div class="content-posts">
+                    <div class="recents-posts-top">
+                        <p class="post-recents">Postagens Recentes</p>
+                        <p class="view-all">Ver todos</p>
                     </div>
                 </div>
+                <div class="content-projects">
+                    <p>Alguns projetos trabalhados</p>
+                    <div class="projects-work">
+                        <div>
+                            <div class="projects-work-left">
+                                <img src="../../assets/imagensProjetos/Rectangle 30.png" alt="">
+                            </div>
+                            <div class="projects-work-rigth">
+                                <h3>Designing Dashboards</h3>
+                                <!-- mudar para variavel -->
+                                <div class="ano">
+                                    <h2>2020</h2>
+                                </div>
+                                <h2 class="tipo">Dashboard</h2>
+                                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                                    officia
+                                    consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                                </p>
+
+                            </div>
+                        </div>
+                        <div>
+                            <div class="projects-work-left">
+                                <img src="../../assets/imagensProjetos/Rectangle 32.png" alt="">
+                            </div>
+                            <div class="projects-work-rigth">
+                                <h3>Vibrant Portraits of 2020</h3>
+                                <!-- mudar para variavel -->
+                                <div class="ano">
+                                    <h2>2018</h2>
+                                </div>
+                                <h2 class="tipo">Illustration</h2>
+                                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                                    officia
+                                    consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                                </p>
+
+                            </div>
+                        </div>
+                        <div>
+                            <div class="projects-work-left">
+                                <img src="../../assets/imagensProjetos/Rectangle 34.png" alt="">
+                            </div>
+                            <div class="projects-work-rigth">
+                                <h3>36 Days of Malayalam type</h3>
+                                <!-- mudar para variavel -->
+                                <div class="ano">
+                                    <h2>2018</h2>
+                                </div>
+                                <h2 class="tipo">Typography</h2>
+                                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                                    officia
+                                    consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-
-        <footer>
-            <div>
-                <small class="copyright">&copy; Copyright 2058, Example Corporation</small>
-            </div>
-        </footer>
-
+        <div class="footer">
+            <div class="icons">
+            <a href="https://www.linkedin.com/in/suellen-moreira-lima-035638169/" target="_blank"><img class="icons-midias-sociais" src="../../assets/Linkedin.svg" alt=""></a>
+            <a href="https://github.com/SuellenLimaDev" target="_blank"><img class="icons-midias-sociais" src="../../assets/square-github.svg" alt=""></a>
+            <a em href="mailto:developer.suellen.lima@gmail.com?subject=Assunto do email&cc=copia@provedor.com.br&bcc=copiaoculta@provedor.com.br&body=Conteúdo do email que será preenchido automaticamente"><img class="icons-midias-sociais" src="../../assets/envelope-solid.svg" alt=""></a>
+            <a href="tel:" target="_blank"><img class="icons-midias-sociais" src="../../assets/whatsapp.svg" alt=""></a>
+        </div>
+            <p class="copyright">&copy; Copyright 2058, Example Corporation</p>
+           
+        </div>
+        
     </div>
+
 </body>
 
 </html>
